--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-naver-maps": "^0.1.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.13",
