--- a/nginx.conf
+++ b/nginx.conf
@@ -3,19 +3,24 @@ events {}
 http {
     server {
         listen 80;
-        server_name 마음이음.site;
+        server_name xn--hz2b60wa3n.site;
 
-        # HTTP에서 HTTPS로 리다이렉트
-        return 301 https://$host$request_uri;
+        # React 앱 정적 파일 제공
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
     }
 
     server {
         listen 443 ssl;
-        server_name 마음이음.site;
+        server_name xn--hz2b60wa3n.site;
 
         # SSL 인증서 경로 설정
-        ssl_certificate /ssl/muiu-front.crt;
-        ssl_certificate_key /ssl/muiu-front.key;
+        ssl_certificate /etc/letsencrypt/live/xn--hz2b60wa3n.site/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/xn--hz2b60wa3n.site/privkey.pem;
 
         # React 앱 정적 파일 제공
         root /usr/share/nginx/html;
