--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.3",
     "@tosspayments/tosspayments-sdk": "^2.3.2",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "react": "^18.3.1",
