--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DANGEROUSLY_DISABLE_HOST_CHECK=true
 # Naver Map Api 구문
 REACT_APP_CLIENT_ID=6um4uarnuv
 REACT_APP_CLIENT_SECRET=yKRqSVB06Gt0EBoYyRaYAdDbkfWfFXNc7rsCZ7f8
+
+REACT_APP_API_URL=http://localhost:8080
