--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.10.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,7 +22,9 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.7",
     "http-proxy-middleware": "^3.0.3",
+    "ncloudchat": "^1.0.48",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.4.0",
@@ -32,6 +36,8 @@
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^6.1.13",
     "tui-color-picker": "^2.2.8",
     "web-vitals": "^2.1.4"
