--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.7",
     "http-proxy-middleware": "^3.0.3",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.4.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-naver-maps": "^0.1.3",
     "react-redux": "^9.1.2",
