--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@toast-ui/editor": "^3.2.2",
-    "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
-    "@toast-ui/react-editor": "^3.2.3",
     "@tosspayments/tosspayments-sdk": "^2.3.2",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
@@ -32,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-naver-maps": "^0.1.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-script": "^2.0.5",
