--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-proxy-middleware": "^3.0.3",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.4.0",
