--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-naver-maps": "^0.1.3",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
