--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.7",
     "http-proxy-middleware": "^3.0.3",
