--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ REACT_APP_API_URL=http://localhost:8080
 
 # Tmap Api 구문
 REACT_APP_TMAP_APP_KEY=Jsvbb3ZbNZ6ouYFH3UU7s1GWcgquuONza47VH4OC
+
+# Naver Login
+REACT_APP_NAVER_CLIENT_ID=5EoXACfzIjcnBB2VQtSy
