--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.13",
     "tui-color-picker": "^2.2.8",
