modify  fund** 짜잘한거2

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.453.0",
     "muiu-client": "file:",
     "react": "^18.2.0",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.2.0",
@@ -38,6 +39,7 @@
     "react-router-dom": "^6.26.2",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
     "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.13",
