키값 마음이음으로 변경

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
 
     server {
         listen 80;
-        server_name xn--hz2b60wa3n.site;
+        server_name 마음이음.site;
 
         # React 앱 정적 파일 제공
         root /usr/share/nginx/html;
@@ -26,11 +26,11 @@ http {
 
     server {
         listen 443 ssl;
-        server_name xn--hz2b60wa3n.site;
+        server_name 마음이음.site;
 
         # SSL 인증서 경로 설정
-        ssl_certificate /etc/letsencrypt/live/xn--hz2b60wa3n.site/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/xn--hz2b60wa3n.site/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/마음이음.site/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/마음이음.site/privkey.pem;
 
         # React 앱 정적 파일 제공
         root /usr/share/nginx/html;
