--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@chakra-ui/react": "^2.10.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.3.0",
